--- a/BookList.csproj
+++ b/BookList.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\img\pexels-felix-mittermeier-956999.jpg" />
+  </ItemGroup>
+
 </Project>
