--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookListConnection": "Server=(localdb)\\MSSQLLocalDB; Database = BookListDB; MultipleActiveResultSets = true"
+    "BookListConnection": "Data Source = BookListDb.sqlite"
+    //"BookListConnection": "Server=(localdb)\\MSSQLLocalDB; Database = BookListDB; MultipleActiveResultSets = true"
   }
 }
